2019-1/231/users/4223/executions/1611_2425.log
== TEST (2019-04-04 19:17:23) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((comb)/(distancia))

print(round(x, 3))
print(km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:18:08) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((comb)/(distancia))

print(round(x, 3 km/l)
-- ERROR:
File "XXXX", line 6
    print(round(x, 3 km/l)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:18:38) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((comb)/(distancia))

print(round(x, 3 ("km/l"))
-- ERROR:
File "XXXX", line 7
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:18:58) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((comb)/(distancia))

print(round(x, 3))
-- OUTPUT:
0.07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:19:27) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((comb)*(distancia))

print(round(x, 3))
-- OUTPUT:
57.144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:20:22) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((comb)*(distancia))

print(round(x, 3,"km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x, 3,"km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:48) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:53) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:54) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:55) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:56) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:57) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:58) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:31:05) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))
print(round(x, 3)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:32:01) 
-- CODE:
distancia=float(input("Digite o valor da distancia total percorrida em km: "))
comb=float(input("Digite o valor do combustivel gasto em litros: "))

x=(distancia)*(comb)

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:11) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:12) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=(("distancia")*("comb"))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:34:13) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- EXECUTION TIME:
0.113515
-- ERROR:
  File "/home/codebench/codes/1611/2425/main.py", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:39:03) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:39:04) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:39:41) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3))
-- OUTPUT:
57.144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:41:18) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3),"km/l")
-- OUTPUT:
57.144 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:41:30) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)*(comb))

print(round(x, 3),"km/l")
-- EXECUTION TIME:
0.174802
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
57.144 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
280397.6 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
2115788.4 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:42:41) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)/(comb))

print(round(x, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:42:53) 
-- CODE:
distancia= float(input("Digite o valor da distancia total percorrida em km: "))
comb= float(input("Digite o valor do combustivel gasto em litros: "))

x=((distancia)/(comb))

print(round(x, 3),"km/l")
-- EXECUTION TIME:
0.21463
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
